@@ -116,6 +116,7 @@ method borg_list_time() {
 
 method restore($components_to_strip, $archive_name, $path) {
 	$log->debugf("Restoring '%s' from archive %s, stripping %d components of the path", $path, $archive_name, $components_to_strip);
+	$archive_name = App::BorgRestore::Helper::untaint($archive_name, qr(.*));
 	system(qw(borg extract -v --strip-components), $components_to_strip, $self->{borg_repo}."::".$archive_name, $path);
 }
 
