@@ -1,6 +1,8 @@
 Revision history for Perl extension App-BorgRestore
 
 {{$NEXT}}
+	- Remove archive name untaint restrictions (remove untaint_archive_name
+	  function)
 
 3.3.0 2019-02-07T16:18:41Z
 	- Support borg list's --prefix option via $borg_prefix setting
